fixed dates visibility

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
 span{
   font-weight: bold;
 }
+button:disabled {
+  cursor: not-allowed;
+  pointer-events: all !important;
+}
